# toolbox

./: .gitignore  Cargo.toml  DEMO_MVC_STRUCTURE.md  IMPROVEMENTS.md  PROJECT_RESTRUCTURE.md  README.md  email_config.json  outlook_config.json  tasks.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-audit/: 01-01-SUMMARY.md  01-02-SUMMARY.md  AUDIT.md
.planning/phases/02-architecture-consolidation/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md
.planning/phases/05-system-utilities-stability/: 05-02-SUMMARY.md
.planning/phases/06-library-migration/: 06-01-SUMMARY.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  modules.md
src/: app.rs  config.rs  main.rs  network_tools.rs  password_manager.rs  ping_result.rs  system_utilities.rs  task_scheduler.rs
src/core/: mod.rs
src/core/backup/: mod.rs
src/core/logging/: mod.rs
src/handlers/: mod.rs  normal_mode.rs  password_manager.rs  task_scheduler.rs
src/models/: mod.rs  ping_result.rs
src/modules/: mod.rs
src/modules/network_tools/: mod.rs
src/modules/network_tools/controller/: mod.rs
src/modules/network_tools/model/: mod.rs
src/modules/password_manager/: mod.rs
src/modules/system_utilities/: mod.rs
src/modules/task_scheduler/: mod.rs
src/shared/: mod.rs
src/shared/models/: app_state.rs  mod.rs
src/shared/utils/: mod.rs
src/ui/: common.rs  main_menu.rs  mod.rs  network_tools.rs  system_utilities.rs  task_scheduler.rs
(+11 files in other folders)
