[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
rand = "0.8"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28.1"
tui = "0.19.0"
signal-hook = "0.3"
regex = "1.7"
dotenv = "0.15"
once_cell = "1.20.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sysinfo = "0.29.10"  # System information
chrono = "0.4"       # Date/time handling
humansize = "2.1.3"  # Human-readable file sizes